# public-prep

./: .env.example  .gitignore  .htaccess  .slugignore  CLAUDE.md  DEPLOYMENT.md  README.md  TEST_COVERAGE_REPORT.md  components.json  copy-assets.js  coverage-report.json  coverage-results.json  demo-server.js  email_samples_preview.html  manual-payment-test.html  migrate-documents-to-uuid.sql  migrate-uuid-complete.sql  package-lock.json  package.json  playwright.config.ts  replit.md  security-test.js  send_email_samples.ts  tailwind.config.ts  test-contact-form.ts  test-cv.txt  test-gtm-production.html  test-hubspot-analytics.js  test-payment-integration.js  test-payment-success.html  test-professional-theme.js  test_sendgrid_simple.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: DEPLOYMENT.md
attached_assets/: Pasted--The-missing-piece-in-interview-preparation-After-working-with-an-excellent-interview-coach-who-gav-1753651110158_1753651110161.txt  Pasted--rest-express-1-0-0-dev-Final-Database-URL-check-erver-index-ts-Environment-development--1753187142219_1753187142219.txt  Pasted--strengths-Structured-approach-Clear-metrics-Team-devel-1753046533377_1753046533378.txt  Pasted-1-Clear-and-Linear-Structure-Sequential-Learning-Present-information-in-a-logical-step-by-step-1753801591205_1753801591206.txt
backend/: .slugignore  build.js  drizzle.config.ts  package-lock.json  package.json  railway.toml  tsconfig.json
client/: index.html
docker/: Dockerfile.test  docker-compose.test.yml
e2e/: README.md  component-flows.spec.ts  (+8 more)
python-backend/: .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt
python-backend/alembic/: env.py
python-backend/src/api/: dependencies.py  main.py
python-backend/src/api/middleware/: __init__.py  auth.py  health.py
python-backend/src/api/routes/: __init__.py  ai.py  answers.py  auth.py  contact.py  documents.py  interviews.py  practice.py  questions.py  ratings.py  speech.py  stripe.py  users.py
python-backend/src/application/dto/: __init__.py  answer.py  auth.py  document.py  interview.py  question.py  rating.py  user.py
python-backend/src/application/interfaces/: __init__.py  ai_service.py  answer_service.py  auth_service.py  document_service.py  email_service.py  interview_service.py  question_service.py  rating_service.py  speech_service.py  stripe_service.py  user_service.py
python-backend/src/application/services/: __init__.py  answer_service.py  auth_service.py  document_service.py  interview_service.py  question_service.py  rating_service.py  user_service.py
python-backend/src/domain/: __init__.py
python-backend/src/domain/entities/: __init__.py  answer.py  document.py  interview.py  question.py  rating.py  user.py  user_progress.py
python-backend/src/domain/errors/: __init__.py  base.py  entity_errors.py
python-backend/src/domain/interfaces/: __init__.py  answer_repository.py  base.py  document_repository.py  interview_repository.py  question_repository.py  rating_repository.py  repository.py  user_repository.py
python-backend/src/domain/value_objects/: __init__.py  enums.py  grade_config.py
python-backend/src/infrastructure/: __init__.py  config.py
python-backend/src/infrastructure/database/: __init__.py  config.py  models.py  session.py
python-backend/src/infrastructure/di/: __init__.py  container.py
python-backend/src/infrastructure/observability/: __init__.py  langfuse.py  telemetry.py
python-backend/src/infrastructure/repositories/: __init__.py  answer_repository.py  base.py  document_repository.py  interview_repository.py  query_builder.py  question_repository.py  rating_repository.py  user_repository.py
python-backend/src/infrastructure/services/: __init__.py  ai_service.py  email_service.py  file_service.py  password_service.py  session_service.py  speech_service.py  stripe_service.py
python-backend/tests/unit/infrastructure/: test_config.py
(+334 files in other folders)
